package-update/service.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    thoth-station.ninja/template-version: 0.6.0-dev
  labels:
    app: thoth
    component: package-update-consumer
  name: package-update-consumer
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    service: package-update-consumer
