package-update/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: package-update-consumer
  labels:
    app: thoth
    component: package-update-consumer
spec:
  to:
    kind: Service
    name: package-update-consumer
